# python_epic_api

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
docs/: AcceleratorConfig.md  AnsysLicense.md  Application.md  ApplicationConfigurationSerialiser.md  BatchApplicationDetails.md  BatchApplicationList.md  BatchApplicationVersionDetails.md  BatchApplicationVersionResource.md  BatchApplicationVersionResourceDetails.md  BatchApplicationVersionSerializerAPI.md  BatchJobSpec.md  BatchJobTaskSpec.md  BatchQueueDetails.md  BillingApi.md  Budget.md  CatalogApi.md  CatalogApplicationsList200Response.md  CatalogClustersList200Response.md  CatalogDesktopList200Response.md  ClusterNodeConfig.md  ConfigApi.md  Cost.md  CostThreshold.md  CurrentSpend.md  DataApi.md  DataFileList200Response.md  DataFolderList200Response.md  DataLocation.md  DataSpec.md  DesktopApi.md  DesktopInstance.md  DesktopList200Response.md  DesktopNodeApp.md  DesktopNodeAppSummary.md  DesktopNodeApplicationVersion.md  DesktopNodeApplicationVersionSummary.md  DesktopNodeConnectionType.md  DesktopNodeLaunchSpec.md  DesktopNodeQuote.md  DesktopNodeType.md  (+90 more)
epic_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
epiccore/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
test/: test_ansys_license.py  test_batch_application_details.py  test_batch_application_list.py  test_batch_application_version_resource.py  test_batch_application_version_resource_details.py  test_batch_application_version_serializer_api.py  test_batch_job_spec.py  (+72 more)
(+308 files in other folders)
