[metadata]
name = epiccore
description = "EPIC Core API"
author = "Zenotech"
author_email = "support@zenotech.com"
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
include_package_data = True
install_requires =
    urllib3
    six
    certifi
    python-dateutil

[options.packages.find]
exclude =
    epicore.test

[nosetests]
logging-clear-handlers=true
verbosity=2
randomize=true
exe=true
with-coverage=true
cover-package=epiccore
cover-erase=true

[flake8]
max-line-length=99


